Update: Forms reset `background-clip` property on `.form-control` to `border-box` causes clipping issues when input background is any other color than white

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -63,6 +63,7 @@ label {
 // Inputs
 
 .form-control {
+	background-clip: border-box;
 	border-width: $input-border-width;
 
 	@if not ($input-font-size == $font-size-base) {
